--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
+    <header>
+      <div class="title_col">Lloyd Vicencio</div>
+    </header>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
