--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,7 @@ header{
 	.title_col h1{
 		text-transform: uppercase;
 		letter-spacing: 0.05em;
-		font-size:1.2rem;
+		font-size:1rem;
+		margin:0;
 	}
 }
