--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <div class="title_col"><h1>Lloyd Vicencio</h1></div>
+      <div class="title_col"><h1><span>Lloyd</span><span>Vicencio</span></h1></div>
     </header>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
