--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,8 @@ header{
 		text-transform: uppercase;
 		letter-spacing: 0.05em;
 		font-size:1rem;
-		font-weight:200;
+		font-weight:400;
 		margin:0;
+		span{display:block;}
 	}
 }
