--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,11 +16,12 @@ header{
 	background-color: $dark_gray;
 	color:$light_gray;
 	.title_col h1{
-		text-transform: uppercase;
-		letter-spacing: 0.05em;
+		//text-transform: uppercase;
+		letter-spacing: 0.08em;
 		font-size:1rem;
-		font-weight:400;
+		font-weight:700;
 		margin:0;
+		line-height:1;
 		span{display:block;}
 	}
 }
