--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@ $sans: 'Montserrat', sans-serif;
 $light_gray: #d1d3d4;
 $dark_gray: #414042;
 
-
+// Header
 header{
 	padding: 2em;
 	font-family: $sans;
@@ -24,4 +24,13 @@ header{
 		line-height:1;
 		span{display:block;}
 	}
+}
+
+// Content
+.contact-box{text-align:center;}
+
+// Footer
+.site-footer{
+	font-size:0.8rem;
+	text-align:center;
 }
