--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,15 +15,18 @@
       <div class="title_col"><h1><span>Lloyd</span><span>Vicencio</span></h1></div>
     </header>
     <section class="page-header">
-      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% endif %}
-      {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}
+      <div class="item video-box">
+        <iframe src="https://www.youtube.com/embed/GpLNKd7G3nw?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="item video-box">
+        <iframe src="https://www.youtube.com/embed/bBW0w-68c3w?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="item video-box"><iframe src="https://www.youtube.com/embed/mD-pnWnHP9U?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
+
+      <div class="item video-box"><iframe src="https://www.youtube.com/embed/R8QpmGgrZYk?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
+
+      <div class="item video-box"><iframe src="https://www.youtube.com/embed/iEg_hzDjaTc?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
+
     </section>
 
     <section class="main-content">
