--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,13 +24,13 @@
       <div class="item video-box"><iframe src="https://www.youtube.com/embed/mD-pnWnHP9U?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
 
       <div class="item img-box">
-        ![useful image]({{ site.url }}/assets/Rosinbros.jpg)
+        ![Image]({{ site.url }}/assets/Rosinbros.jpg)
       </div>
 
       <div class="item video-box"><iframe src="https://www.youtube.com/embed/R8QpmGgrZYk?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
 
       <div class="item img-box">
-        ![useful image]({{ site.url }}/assets/MFD.jpg)
+        ![Image]({{ site.url }}/assets/MFD.jpg)
       </div>
 
       <div class="item video-box"><iframe src="https://www.youtube.com/embed/iEg_hzDjaTc?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
