--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,13 +24,13 @@
       <div class="item video-box"><iframe src="https://www.youtube.com/embed/mD-pnWnHP9U?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
 
       <div class="item img-box">
-        <img src="{{ site.url }}/portfolio/assets/images/Rosinbros.jpg" />
+        <a href="http://rosinbros.com.au/" target="_blank"><img src="{{ site.url }}/portfolio/assets/images/Rosinbros.jpg" alt="Rosin Bros design and link to external website. Link opens in a new window" /></a>
       </div>
 
       <div class="item video-box"><iframe src="https://www.youtube.com/embed/R8QpmGgrZYk?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
 
       <div class="item img-box">
-        <img src="{{ site.url }}/portfolio/assets/images/MFD.jpg" />
+        <a href="http://www.mfdays.com/" target="_blank"><img src="{{ site.url }}/portfolio/assets/images/MFD.jpg" alt="Murrumbateman Field Days design and link to external website. Link opens in a new window" /></a>
       </div>
 
       <div class="item video-box"><iframe src="https://www.youtube.com/embed/iEg_hzDjaTc?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
