--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,6 +40,7 @@ header{
 .item{
 	margin-bottom:2em;
 }
+.img-box img{max-width:100%;}
 .video-box {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
