--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="item video-box"><iframe src="https://www.youtube.com/embed/iEg_hzDjaTc?ecver=2" width="640" height="360" frameborder="0" allowfullscreen></iframe></div>
-
+      <div class="item img-box"><iframe width="560" height="315" src="https://www.youtube.com/embed/aFcIvJYuCI4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
     </section>
 
     <section class="main-content">
